# io_unity

./: .gitignore  Cargo.toml  LICENSE  README.md
io_unity/: Cargo.toml  README.md
io_unity/examples/: fsdump.rs  live2dextractor.rs
io_unity/src/: error.rs  lib.rs  unity_asset_view.rs  unityfs.rs  untityfs.rs
io_unity/src/classes/: mesh_filter.rs  mesh_renderer.rs  mod.rs  transform.rs
io_unity/src/classes/animation_clip/: mod.rs  type_tree.rs  version_2018_3_0.rs
io_unity/src/classes/animator/: mod.rs  type_tree.rs  version_2018_0_0.rs
io_unity/src/classes/asset_bundle/: mod.rs  type_tree.rs  version14.rs
io_unity/src/classes/audio_clip/: mod.rs  type_tree.rs  version_5_0_0.rs
io_unity/src/classes/avatar/: mod.rs  type_tree.rs  version_2018_2_0.rs
io_unity/src/classes/behaviour/: behaviour.rs  mod.rs  type_tree.rs
io_unity/src/classes/component/: component.rs  mod.rs  type_tree.rs
io_unity/src/classes/editor_extension/: editor_extension.rs  mod.rs  type_tree.rs
io_unity/src/classes/game_object/: mod.rs  type_tree.rs  version_5_5_0.rs
io_unity/src/classes/material/: mod.rs  type_tree.rs  version_5_6_0.rs
io_unity/src/classes/mesh/: mod.rs  type_tree.rs  version_2018_2_0.rs  version_2020_0_0.rs
io_unity/src/classes/mesh_filter/: mesh_filter.rs  mod.rs  type_tree.rs
io_unity/src/classes/mesh_renderer/: mesh_renderer.rs  mod.rs  type_tree.rs
io_unity/src/classes/mono_behaviour/: mod.rs  mono_behaviour.rs  type_tree.rs
io_unity/src/classes/mono_script/: mod.rs  type_tree.rs  version_2018_2_0.rs
io_unity/src/classes/named_object/: mod.rs  named_object.rs  type_tree.rs
io_unity/src/classes/p_ptr/: mod.rs  type_tree.rs  version13.rs  version14.rs
io_unity/src/classes/renderer/: mod.rs  type_tree.rs  version_2020_0_0.rs
io_unity/src/classes/skinned_mesh_renderer/: mod.rs  type_tree.rs  version_4_3_0.rs
io_unity/src/classes/texture2d/: mod.rs  type_tree.rs  version_2018_2_0.rs  version_2020_2_0.rs
io_unity/src/classes/texture_2d/: mod.rs  type_tree.rs  version_2020_2_0.rs
io_unity/src/classes/transform/: mod.rs  transform.rs  type_tree.rs
io_unity/src/serialized_file/: mod.rs  version1.rs  version10.rs  version11.rs  version12.rs  version13.rs  version14.rs  version15.rs  version16.rs  version17.rs  version19.rs  version2.rs  version20.rs  version21.rs  version22.rs  version3.rs  version4.rs  version5.rs  version6.rs  version7.rs  version8.rs  version9.rs
io_unity/src/type_tree/: convert.rs  mod.rs  reader.rs  type_tree_json.rs
io_unity/src/until/: binrw_parser.rs  mod.rs
io_unity_python/: Cargo.toml  blender.py  main.py  pyproject.toml
io_unity_python/src/: lib.rs
lib/io_unity/: Cargo.toml
lib/io_unity/examples/: fsdump.rs
lib/io_unity/src/: lib.rs  untityfs.rs
lib/io_unity/src/classes/: behaviour.rs  component.rs  editor_extension.rs  mod.rs  mono_behaviour.rs  named_object.rs
lib/io_unity/src/classes/animation_clip/: mod.rs
lib/io_unity/src/classes/asset_bundle/: mod.rs
lib/io_unity/src/classes/audio_clip/: mod.rs  version_5_0_0.rs
lib/io_unity/src/classes/game_object/: version_5_5_0.rs
lib/io_unity/src/classes/material/: mod.rs  version_5_6_0.rs
lib/io_unity/src/serialized_file/: mod.rs  version11.rs  version17.rs  version22.rs  version6.rs  version8.rs
lib/io_unity/src/until/: binrw_parser.rs
(+28 files in other folders)
