[package]
name = "io_unity"
version = "0.1.0"
edition = "2021"
authors = ["gameltb <gamegccltb@gmail.com>"]
description = "io_unity is a lib for read unity assets"

license = "MIT/Apache-2.0"

[dependencies]
once_cell = "1"
anyhow = "1.0"
num_enum = "0.5"
regex = "1"
modular-bitfield = "0.11"
walkdir = "2"
binrw = "0.10"
lz4 = "1"

tar = "0.4"
zstd = "0.12"
serde_json = "1"
serde = { version = "1.0", features = ["derive"] }

image = "0.24"
texpresso = "2"
astc-decode = "0.3"

glam = "0.22"
half = "2.1"
ordered-float = "3.4"
crc = "3.0"

[dev-dependencies]
clap = { version = "4", features = ["derive"] }
