[package]
name = "io_unity"
version = "0.1.0"
edition = "2021"
authors = ["gameltb <gamegccltb@gmail.com>"]
description = "io_unity is a lib for read unity assets"

license = "MIT/Apache-2.0"

[dependencies]
once_cell = "1"
anyhow = "1.0"
num_enum = "0.5"
regex = "1"
modular-bitfield = "0.11"
walkdir = "2"
binrw = "0.10"
lz4 = "1"
glam = "0.22"

tar = { version ="0.4", optional = true }
zstd = { version ="0.12", optional = true }
serde_json = { version ="1", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true  }

image = { version ="0.24", optional = true }
texpresso = { version ="2", optional = true }
astc-decode = { version ="0.3", optional = true }

half =  { version ="2.1", optional = true }
ordered-float = { version ="3.4", optional = true }
crc = { version ="3.0", optional = true }

[features]
default = []
type-tree-json = ["tar","zstd","serde_json","serde"]
external-class-handle = ["half","ordered-float","crc"]
external-class-handle-texture2d = ["image","texpresso","astc-decode"]
all = ["type-tree-json","external-class-handle","external-class-handle-texture2d"]

[dev-dependencies]
clap = { version = "4", features = ["derive"] }

[[example]]
name = "fsdump"
required-features = ["all"]

[[example]]
name = "live2dextractor"
required-features = ["all"]