[package]
name = "io_unity_python"
version = "0.1.0"
edition = "2021"
authors = ["gameltb <gamegccltb@gmail.com>"]
description = "io_unity_python is a simple python bind for io_unity"

license = "MIT/Apache-2.0"

[lib]
name = "io_unity_python"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.18", features = ["extension-module"] }
io_unity = { path = "../io_unity" }  