[package]
name = "io_unity"
version = "0.1.0"
edition = "2021"
authors = ["gameltb <gamegccltb@gmail.com>"]
description = "io_unity is a lib for read unity assets"

license = "MIT/Apache-2.0"

[dependencies]
binrw = "0.10"
num_enum = "0.5"
lz4 = "1"
lazy_static = "1.4"
regex = "1"

image = "0.24"
texpresso = "2"
astc-decode = "0.3"

glam = "0.21"
half = "2.1"